Zmiany dotyczące pobierania ról i stanowisk